--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@reduxjs/toolkit": "^2.9.2",
     "@testing-library/dom": "^10.4.1",
@@ -16,6 +17,7 @@
     "antd": "^5.27.5",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
+    "iconsax-react": "^0.0.8",
     "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
